[gd_scene load_steps=21 format=3 uid="uid://dbfhf62x1ddke"]

[ext_resource type="Texture2D" uid="uid://bj5g61nm8uscg" path="res://arts/characters/NPC/$femHuman4.png" id="1_aagu7"]
[ext_resource type="Script" path="res://scenes/noble_npc.gd" id="1_hfoos"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g1ca7"]
atlas = ExtResource("1_aagu7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs1xg"]
atlas = ExtResource("1_aagu7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yitxn"]
atlas = ExtResource("1_aagu7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h504l"]
atlas = ExtResource("1_aagu7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf0yc"]
atlas = ExtResource("1_aagu7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45dpj"]
atlas = ExtResource("1_aagu7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcbdo"]
atlas = ExtResource("1_aagu7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4h6p"]
atlas = ExtResource("1_aagu7")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw7jx"]
atlas = ExtResource("1_aagu7")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpk2l"]
atlas = ExtResource("1_aagu7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lauuy"]
atlas = ExtResource("1_aagu7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djxm5"]
atlas = ExtResource("1_aagu7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afoj1"]
atlas = ExtResource("1_aagu7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo2jr"]
atlas = ExtResource("1_aagu7")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4c3e"]
atlas = ExtResource("1_aagu7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aadxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1ca7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs1xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yitxn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h504l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf0yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45dpj")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcbdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4h6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw7jx")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpk2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djxm5")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afoj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo2jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4c3e")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qrc1s"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_w5fad"]
radius = 30.3645

[node name="nobleNPC" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_hfoos")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.547, 1.547)
sprite_frames = SubResource("SpriteFrames_aadxa")
animation = &"idle"
frame_progress = 0.342077

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 17)
shape = SubResource("CircleShape2D_qrc1s")

[node name="chat_area_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_area_detection"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_w5fad")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="chat_area_detection" to="." method="_on_chat_area_detection_body_entered"]
[connection signal="body_exited" from="chat_area_detection" to="." method="_on_chat_area_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
